--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
     <!-- operateurs -->
     <div id="operateurs" class="operateurs">
 
-        <div id="firstOperation" class="lesOperateurs">
-            <div id="firstNumber" class="operateur">+</div>
-            <div id="firstOperateur" class="operateur">-</div>
-            <div id="secondnumber" class="operateur">*</div>
-            <div id="firstEqual" class="operateur">/</div>
+        <div id="tousOperateurs" class="lesOperateurs">
+            <div id="plus" class="operateur">+</div>
+            <div id="moins" class="operateur">-</div>
+            <div id="multi" class="operateur">*</div>
+            <div id="divise" class="operateur">/</div>
         </div> <!-- fin div lesOperateurs -->
 
     </div> <!-- fin div operateurs -->
@@ -97,7 +97,8 @@
         
         <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
         <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js/jeu.js"></script>
+        <!-- <script type="text/javascript" src="js/main.js"></script> -->
 
     </body>
  
