--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             <label>Nombre de block dans la pioche :</label>
             <input type="text" id="nbPickBlock" name="blockPickNumber">
 
-            <label>Largeur des blocks :</label>
+            <label>Longueur des blocks :</label>
             <input type="text" id="widthBlock" name="blockWidth">
 
-            <label>Longueur des blocks :</label>
+            <label>Hauteur des blocks :</label>
             <input type="text" id="heightBlock" name="blockHeight">
 
             <button id="validate">Valider</button>
