--- a/www/index.html
+++ b/www/index.html
@@ -85,13 +85,17 @@
     
   </section>
 
+  <!-- Librairies tierces -->
+  <script src="cordova.js"></script>
+  <script src="third-party/angular/angular.js"></script>
+  <script src="third-party/angular-touch/angular-touch.min.js"></script>
+  
+  <!-- Initialisation -->
+  <script src="js/main.js"></script>
+  
   <!-- Données -->
   <script src="js/data/game.js"></script>
   <script src="js/data/profiles.js"></script>
-
-  <script src="third-party/angular/angular.js"></script>
-  <script src="third-party/angular-touch/angular-touch.min.js"></script>
-  <script src="js/main.js"></script>
 
   <!-- Contrôleurs -->
   <script src="js/controller/chaptersListController.js"></script>
